fix bugs in post
